# mcp-server-nsf

./: app.yaml  main.py  pyproject.toml  requirements.txt
src/nsf_mcp/: api.py  app.py  config.py  embeddings.py  models.py  routes.py  search.py  server.py  tools.py
src/nsf_mcp/utils/: logging.py
tests/: test_basic.py
